@@ -1,7 +1,7 @@
 # Default arguments for Ganeti daemons
 NODED_ARGS=""
 MASTERD_ARGS=""
-RAPI_ARGS=""
+RAPI_ARGS="-b 127.0.0.1 --require-authentication"
 CONFD_ARGS=""
 WATCHER_START_DELAY="90"
 WATCHER_ACTIVE_FLAG="/var/run/ganeti/ganeti-watcher-active.flag"
